src/components/FloatNotification/styles.scss
@use "../../styles/utils.scss" as *;

.FloatNotification {
  position: fixed;
  // Offset header height
  top: 52px;
  right: 0;
  z-index: 10;
  display: flex;
  flex-direction: column-reverse;
  gap: pxToRem(12px);

  background: linear-gradient(
    240deg,
    rgba(0, 0, 0, 0.08) 0%,
    rgba(0, 0, 0, 0) 27.89%
  );
  width: 100%;
  max-width: pxToRem(412px);
  padding: pxToRem(24px);

  @media screen and (max-width: 1040px) {
    top: 68px;
  }

  &__item {
    display: flex;
    flex-direction: row;
    gap: pxToRem(8px);
    position: relative;
    z-index: 1;

    background-color: var(--sds-clr-gray-01);
    border: 1px solid var(--sds-clr-gray-06);
    border-radius: pxToRem(8px);
    padding: pxToRem(12px);

    animation: fadeIn 300ms ease-out;

    &__left,
    &__right {
      flex-shrink: 0;
      width: pxToRem(20px);

      svg {
        display: block;
        width: pxToRem(16px);
        height: pxToRem(16px);
      }
    }

    &__left {
      padding: pxToRem(3px) pxToRem(2px);

      &[data-type="success"] {
        svg {
          stroke: var(--sds-clr-green-09);
        }
      }
    }

    &__content {
      flex: 1;
      display: flex;
      flex-direction: column;
      gap: pxToRem(12px);
    }

    &__title {
      color: var(--sds-clr-gray-12);
    }

    &__description {
      color: var(--sds-clr-gray-11);
      word-break: break-all;
    }

    &__actions {
      font-size: pxToRem(14px);
      line-height: pxToRem(20px);
    }
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: scale(0.95) translateY(-10px);
  }
  to {
    opacity: 1;
    transform: scale(1) translateY(0);
  }
}

